# Studies2

./: .gitignore  justfile  pyproject.toml  utils.py
abm/: list1.html  list1.ipynb  list2.html  list2.ipynb  list3.ipynb
abmcs/: README.md  list1.ipynb  utils.py
aoud/: communicatio_graph.html  list2.ipynb  utils.py
aoud/emails/: gmail.py  model.py
ethics/: README.md
ot/: README.md  list2.ipynb  population.csv
ud/: README.md  communicatio_graph.html  communities_levels1_.html  communities_levels4_.html  communities_levels_4.html  communities_louvian_levels_1.html  communities_louvian_levels_2.html  docker-compose.yaml  justfile  list1.ipynb  list2.ipynb  test.html  utils.py
ud/emails/: gmail.py  model.py
ud/html/: communicatio_graph.html  communities_levels_4.html  communities_louvian_levels_1.html
ud/text_processing/: word_difficulty.py
