[project]
name="studies2"
requires-python = ">= 3.12"
version="0.1"
dependencies = [
    "altair==5.5.0",
    "bokeh>=3.8.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupytext>=1.17.3",
    "marimo==0.16.3",
    "matplotlib>=3.10.6",
    "networkx==3.5",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "polars==1.33.1",
    "pydantic==2.11.9",
    "pydantic-settings>=2.11.0",
    "pyvis>=0.3.2",
    "ruff==0.13.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "tqdm==4.67.1",
    "vega-datasets==0.9.0",
]


[tool.marimo.formatting]
line_length = 120

[tool.marimo.display]
default_width = "full"

[tool.marimo.runtime]
theme = "dark"
cell_output = "below"
